# RRRAG

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Makefile  PLAN.md  README.md  ask.sh  pyproject.toml  synth.sh
.claude/: settings.json
.claude/hooks/: predict_gate.py
.devcontainer/: Dockerfile  devcontainer.json
docs/: LEARNING.md
docs/adr/: 0001-dataset-never-committed-publicly.md  0002-experiments-product-split.md  0003-python-container-with-framework-agnostic-core.md  0004-github-r2-devcontainer-not-onedrive.md  0005-lancedb-embedded-vector-store.md  0006-page-snapshots-fetch-once-parse-freely.md
docs/sessions/: 01-end-to-end-walkthrough.md  02-golden-questions.md  03-baseline-prediction.md
evals/: cli.py  golden.jsonl  golden.py  retrieval.py  synthesize.py
experiments/: corpus_stats.ipynb
rag_core/: answer.py  chunks.py  cli.py  embeddings.py  index.py
resources/: vector-databases-2026.md
scraper/: cli.py  discover.py  enrich.py  fetch.py  manifest.py  parse.py  politeness.py  speakers.py
