[project]
name = "rrrag"
version = "0.1.0"
description = "RAG over the Rational Reminder podcast — a learning project"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
]

[dependency-groups]
dev = [
    "pytest>=8",
]

[project.scripts]
scraper = "scraper.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scraper"]
