[project]
name = "rrrag"
version = "0.1.0"
description = "RAG over the Rational Reminder podcast — a learning project"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "lancedb>=0.34.0",
    "voyageai>=0.4.1",
    "anthropic>=0.116.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "pytest>=8",
]

[project.scripts]
scraper = "scraper.cli:main"
rag = "rag_core.cli:main"
evals = "evals.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scraper", "rag_core", "evals"]
